fix: add word wrap to register input-error

--- a/frontend/src/blocks/form/__input-error/_type/form__input-error_type_register.css
+++ b/frontend/src/blocks/form/__input-error/_type/form__input-error_type_register.css
@@ -1,3 +1,7 @@
+.form__input-error_type_register {
+    word-break: break-word;
+}
+
 .form__input-error_type_register:last-of-type {
     /* нижний отступ равен расстоянию от нижнего края инпута до верхнего края кнопки(48px)
      минус (минимальная высота текста ошибки + верхний отступ текста ошибки) */
